logs/app_20250610_180813.log
2025-06-10 18:08:13,596 - src.app_final_vue - INFO - Starting application creation
2025-06-10 18:08:13,601 - src.app_final_vue - INFO - Registered API blueprint
2025-06-10 18:08:13,601 - src.app_final_vue - INFO - Application initialized in development mode
2025-06-10 18:08:13,601 - src.app_final_vue - INFO - Configuring CORS with origins: ['http://localhost:5173', 'http://127.0.0.1:5173', 'https://wolf.law.uw.edu']
2025-06-10 18:08:13,607 - src.app_final_vue - INFO - Application initialization completed successfully
2025-06-10 18:08:13,607 - src.app_final_vue - INFO - Starting application creation
2025-06-10 18:08:13,612 - src.app_final_vue - INFO - Registered API blueprint
2025-06-10 18:08:13,612 - src.app_final_vue - INFO - Application initialized in development mode
2025-06-10 18:08:13,612 - src.app_final_vue - INFO - Configuring CORS with origins: ['http://localhost:5173', 'http://127.0.0.1:5173', 'https://wolf.law.uw.edu']
2025-06-10 18:08:13,617 - src.app_final_vue - INFO - Application initialization completed successfully
2025-06-10 18:09:34,431 - src.app_final_vue - INFO - Endpoint /analyze-document accessed
2025-06-10 18:09:34,431 - src.app_final_vue - INFO - [ANALYZE_DOCUMENT] Received request to /analyze-document
2025-06-10 18:09:34,431 - src.app_final_vue - INFO - [ANALYZE_DOCUMENT] Request method: POST
2025-06-10 18:09:34,431 - src.app_final_vue - INFO - [ANALYZE_DOCUMENT] Content-Type: multipart/form-data; boundary=----WebKitFormBoundaryQRtbArke93URQdlP
2025-06-10 18:09:34,431 - src.app_final_vue - INFO - [ANALYZE_DOCUMENT] Headers: {'Host': 'localhost:5000', 'Connection': 'close', 'Content-Length': '213713', 'Sec-Ch-Ua-Platform': '"Windows"', 'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/137.0.0.0 Safari/537.36 Edg/137.0.0.0', 'Accept': 'application/json', 'Sec-Ch-Ua': '"Microsoft Edge";v="137", "Chromium";v="137", "Not/A)Brand";v="24"', 'Content-Type': 'multipart/form-data; boundary=----WebKitFormBoundaryQRtbArke93URQdlP', 'X-Api-Key': '443a87912e4f444fb818fca454364d71e4aa9f91', 'Sec-Ch-Ua-Mobile': '?0', 'Origin': 'http://localhost:5173', 'Sec-Fetch-Site': 'same-origin', 'Sec-Fetch-Mode': 'cors', 'Sec-Fetch-Dest': 'empty', 'Referer': 'http://localhost:5173/casestrainer/enhanced-validator?tab=document', 'Accept-Encoding': 'gzip, deflate, br, zstd', 'Accept-Language': 'en-US,en;q=0.9'}
2025-06-10 18:09:34,431 - src.app_final_vue - INFO - [ANALYZE_DOCUMENT] Full URL: http://localhost:5000/casestrainer/api/analyze-document
2025-06-10 18:09:34,432 - src.app_final_vue - INFO - [ANALYZE_DOCUMENT] Path: /casestrainer/api/analyze-document
2025-06-10 18:09:34,434 - src.app_final_vue - INFO - [ANALYZE_DOCUMENT] Form data: {'citation': 'document_analysis', 'extract_citations': 'true', 'validate_citations': 'true', 'options': '{"is_binary":true,"file_type":"application/pdf","file_ext":"pdf","filename":"gov.uscourts.wyd.64014.141.0_1.pdf"}'}
2025-06-10 18:09:34,434 - src.app_final_vue - INFO - [ANALYZE_DOCUMENT] Files: ['file']
2025-06-10 18:09:34,434 - src.app_final_vue - INFO - [ANALYZE_DOCUMENT] File info - filename: gov.uscourts.wyd.64014.141.0_1.pdf, content_type: application/pdf
2025-06-10 18:09:34,434 - src.app_final_vue - INFO - [ANALYZE_DOCUMENT] Parsed form data
2025-06-10 18:09:35,024 - src.app_final_vue - INFO - [ANALYZE_DOCUMENT] Successfully extracted text from file
2025-06-10 18:09:35,024 - src.app_final_vue - INFO - [ANALYZE_DOCUMENT] Document analysis request: {
  "has_file": true,
  "filename": "gov.uscourts.wyd.64014.141.0_1.pdf",
  "file_size": 212964,
  "has_text": true,
  "text_length": 99,
  "options": {
    "convert_pdf_to_md": true,
    "is_binary": true,
    "file_type": "application/pdf",
    "file_ext": "pdf"
  }
}
2025-06-10 18:09:35,064 - src.app_final_vue - ERROR - [ANALYZE_DOCUMENT] Error in document analysis: invalid syntax (enhanced_validator_production.py, line 966)
2025-06-10 18:09:35,066 - src.app_final_vue - ERROR - Traceback (most recent call last):
  File "C:\Users\jafrank\OneDrive - UW\Documents\GitHub\CaseStrainer\src\vue_api_endpoints.py", line 1116, in analyze_document
    from enhanced_validator_production import enhanced_analyze
  File "C:\Users\jafrank\OneDrive - UW\Documents\GitHub\CaseStrainer\src\enhanced_validator_production.py", line 966
    >>>>>>> REPLACE
    ^^
SyntaxError: invalid syntax

2025-06-10 18:09:35,066 - src.app_final_vue - ERROR - [ANALYZE_DOCUMENT] Detailed error type: SyntaxError
2025-06-10 18:09:35,066 - src.app_final_vue - ERROR - [ANALYZE_DOCUMENT] Error details: SyntaxError('invalid syntax', ('C:\\Users\\jafrank\\OneDrive - UW\\Documents\\GitHub\\CaseStrainer\\src\\enhanced_validator_production.py', 966, 1, '>>>>>>> REPLACE\n', 966, 3))
